--- a/surveys_processing/lofar_lb_gpipeline/prefactor_version/pipeline.cfg
+++ b/surveys_processing/lofar_lb_gpipeline/prefactor_version/pipeline.cfg
@@ -6,8 +6,8 @@ hdf5root =
 wcsroot = /opt/cep/lofar/external/wcslib
 aoflaggerroot=/opt/cep/aoflagger/current
 pythonpath = /opt/cep/lofar/lofar_versions/LOFAR-Release-2_19_0/lofar_build/install/gnu_opt/lib/python2.7/site-packages
-runtime_directory = /data/scratch/drabent/lbgp
-recipe_directories = [%(pythonpath)s/lofarpipe/recipes]
+runtime_directory = /data/scratch/lb_bw/pipeline_test
+recipe_directories = [%(pythonpath)s/lofarpipe/recipes,/data/scratch/lb_bw/pipeline_test/lofar-lb/surveys_processing/lofar_lb_gpipeline/prefactor_version,/data/scratch/lb_bw/prefactor]
 working_directory = %(runtime_directory)s
 task_files = [%(lofarroot)s/share/pipeline/tasks.cfg]
 
@@ -15,7 +15,7 @@ task_files = [%(lofarroot)s/share/pipeline/tasks.cfg]
 job_directory = %(runtime_directory)s/%(job_name)s
 
 [cluster]
-clusterdesc = /data/scratch/drabent/lbgp/pipeline.clusterdesc
+clusterdesc = /data/scratch/lb_bw/pipeline_test/lofar-lb/surveys_processing/lofar_lb_gpipeline/prefactor_version/pipeline.clusterdesc
 
 [deploy]
 engine_ppath = %(pythonpath)s:%(pyraproot)s/lib:/opt/cep/pythonlibs/lib/python/site-packages
